--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ POSTGRES_PASSWORD=webmaster
 POSTGRES_DB=test-work
 DB_HOST=db-host
 DB_PORT=5432
+
+RABBITMQ_DEFAULT_USER=rabbit
+RABBITMQ_DEFAULT_PASS=rabbit
+RABBITMQ_DEFAULT_VHOST=/
+RABIIT_HOST=rabbit
