--- a/code/.env
+++ b/code/.env
@@ -1,5 +1,9 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=89cdc916b486c84496ecfd17c1ee5b24
-DATABASE_URL="postgresql://webmaster:webmaster@db-host:5432/test-work?serverVersion=13&charset=utf8"
 ###< symfony/framework-bundle ###
+
+DATABASE_URL=postgresql://webmaster:webmaster@db-host:5432/test-work?serverVersion=13&charset=utf8
+RABBITMQ_DSN=amqp://rabbit:rabbit@rabbitmq:5672/%2f/messages
+MAILER_DSN=smtp://mailcatcher:1025
+
