--- a/code/composer.json
+++ b/code/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "cweagans/composer-patches": "^1.7",
         "doctrine/annotations": "^1.12",
@@ -17,10 +18,11 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/mailer": "5.2.*",
+        "symfony/messenger": "5.2.*",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/proxy-manager-bridge": "5.2.*",
-        "symfony/yaml": "5.2.*",
-        "ext-json": "*"
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
