--- a/code/.env
+++ b/code/.env
@@ -3,7 +3,7 @@ APP_ENV=dev
 APP_SECRET=89cdc916b486c84496ecfd17c1ee5b24
 ###< symfony/framework-bundle ###
 
-DATABASE_URL=postgresql://webmaster:webmaster@db-host:5432/test-work?serverVersion=13&charset=utf8
-RABBITMQ_DSN=amqp://rabbit:rabbit@rabbitmq:5672/%2f/messages
+DATABASE_URL=postgresql://webmaster:webmaster@postgres:5432/test-work?serverVersion=13&charset=utf8
+RABBITMQ_DSN=amqp://user:password@rabbit:5672/%2f/messages
 MAILER_DSN=smtp://mailcatcher:1025
 
