--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ SOCKET_FILE=php-fpm.sock
 POSTGRES_USER=webmaster
 POSTGRES_PASSWORD=webmaster
 POSTGRES_DB=test-work
-DB_HOST=db-host
+DB_HOST=postgres
 DB_PORT=5432
 
-RABBITMQ_DEFAULT_USER=rabbit
-RABBITMQ_DEFAULT_PASS=rabbit
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
 RABBITMQ_DEFAULT_VHOST=/
-RABIIT_HOST=rabbit
+RABBIT_HOST=rabbit
