--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,15 @@ version: "3"
 
 services:
   webserver:
-    build:
-      args:
-        UID: ${SERVER_UID}
-        USER: ${SERVER_USER}
-        GID: ${SERVER_GID}
-        GROUP: ${SERVER_GROUP}
-      context: docker/nginx
-    image: atimofeev/webserver
+#    build:
+#      args:
+#        UID: ${SERVER_UID}
+#        USER: ${SERVER_USER}
+#        GID: ${SERVER_GID}
+#        GROUP: ${SERVER_GROUP}
+#      context: docker/nginx
+    image: altimofeev/webserver-localhost
+    container_name: webserver
     working_dir: ${WORKDIR}
     ports:
     - 80:80
@@ -20,14 +21,15 @@ services:
       - sock:${SOCKET_DIR}
 
   app:
-    build:
-      args:
-        UID: ${SERVER_UID}
-        USER: ${SERVER_USER}
-        GID: ${SERVER_GID}
-        GROUP: ${SERVER_GROUP}
-      context: docker/fpm
-    image: atimofeev/php-fpm
+#    build:
+#      args:
+#        UID: ${SERVER_UID}
+#        USER: ${SERVER_USER}
+#        GID: ${SERVER_GID}
+#        GROUP: ${SERVER_GROUP}
+#      context: docker/fpm
+    image: altimofeev/php-fpm-amqp
+    container_name: app
     env_file:
       - .env
     working_dir: ${WORKDIR}
@@ -36,8 +38,8 @@ services:
       - sock:${SOCKET_DIR}
 
   db:
-    container_name: ${DB_HOST}
     image: postgres:13.2-alpine
+    container_name: ${DB_HOST}
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -49,14 +51,12 @@ services:
       - ./dbdata:/var/lib/postgresql/data
 
   rabbitmq:
-    container_name: rabbitmq
-    hostname: rabbitmq
-    image: rabbitmq:3-management
+    container_name: ${RABBIT_HOST}
+    image: rabbitmq:management
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
       RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_DEFAULT_VHOST}
-    working_dir: ${WORKDIR}
     ports:
     - 5672:5672
     - 8081:15672
